media tabla rosen

--- a/Practica 4/reporteP4.tex
+++ b/Practica 4/reporteP4.tex
@@ -84,37 +84,37 @@
         \hline
         \multirow{2}{*}{Conf} & \multirow{2}{*}{Estadíst.} & \multicolumn{2}{c|}{Funciones de prueba} \\ \cline{3-4} 
                               &                             & Ackley & Rosenbrock \\ \hline
-        1                     & min                         & 18.515644131362567 & \\ \cline{2-4} 
-                              & max                         &     21.95       &        \\ \cline{2-4} 
-                              & promedio                    &      21.090003122849488      &        \\ \cline{2-4} 
+        1                     & min                         & 18.515644131362567 & 498.35182704181545 \\ \cline{2-4} 
+                              & max                         &     21.95       &    1,084   \\ \cline{2-4} 
+                              & promedio                    &      21.090003122849488      &    4553.570892237594    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        2                     & min                         &     9.517998536467005   & ...    \\ \cline{2-4}
-                              & max                         &  22.02   &        \\ \cline{2-4}
-                              & promedio                    &    9.517998536467003    & ...    \\ \cline{2-4}
+        2                     & min                         &     9.517998536467005   & 16.59913616876128    \\ \cline{2-4}
+                              & max                         &  22.02   &    1,093    \\ \cline{2-4}
+                              & promedio                    &    9.517998536467003    &  16.59913616876128   \\ \cline{2-4}
                               & des. est.                   &            &        \\ \hline
-        3                     & min                         &      4.976418408338478      &        \\ \cline{2-4} 
-                              & max                         &     22.09       &        \\ \cline{2-4} 
-                              & promedio                    &      4.9764184083384775      &        \\ \cline{2-4} 
+        3                     & min                         &      4.976418408338478      &     10.667890800223562   \\ \cline{2-4} 
+                              & max                         &     22.09       &     1,095   \\ \cline{2-4} 
+                              & promedio                    &      4.9764184083384775      &    10.667890800223566    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        4                     & min                         &      18.515644131362567      &        \\ \cline{2-4} 
-                              & max                         &     21.94       &        \\ \cline{2-4} 
-                              & promedio                    &     21.090003122849488       &        \\ \cline{2-4} 
+        4                     & min                         &      18.515644131362567      &    498.35182704181545    \\ \cline{2-4} 
+                              & max                         &     21.94       &   1,088     \\ \cline{2-4} 
+                              & promedio                    &     21.090003122849488       &   4553.570892237594     \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        5                     & min                         &    9.517998536467005        &        \\ \cline{2-4} 
-                              & max                         &        21.85    &        \\ \cline{2-4} 
-                              & promedio                    &      9.517998536467003      &        \\ \cline{2-4} 
+        5                     & min                         &    9.517998536467005        &   16.59913616876128     \\ \cline{2-4} 
+                              & max                         &        21.85    &    1,088    \\ \cline{2-4} 
+                              & promedio                    &      9.517998536467003      &     16.59913616876128   \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        6                     & min                         &    4.976418408338478        &        \\ \cline{2-4} 
-                              & max                         &        21.87    &        \\ \cline{2-4} 
-                              & promedio                    &     4.9764184083384775       &        \\ \cline{2-4} 
+        6                     & min                         &    4.976418408338478        &    10.667890800223562    \\ \cline{2-4} 
+                              & max                         &        21.87    &     1,095   \\ \cline{2-4} 
+                              & promedio                    &     4.9764184083384775       &   10.667890800223566     \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        7                     & min                         &    18.515644131362567        &        \\ \cline{2-4} 
-                              & max                         &            &        \\ \cline{2-4} 
-                              & promedio                    &      21.090003122849488      &        \\ \cline{2-4} 
+        7                     & min                         &    18.515644131362567        &   498.35182704181545     \\ \cline{2-4} 
+                              & max                         &        21.86    &     1,088   \\ \cline{2-4} 
+                              & promedio                    &      21.090003122849488      &   4553.570892237594     \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        8                     & min                         &      9.517998536467005      &        \\ \cline{2-4} 
-                              & max                         &     21.96       &        \\ \cline{2-4} 
-                              & promedio                    &     9.517998536467003       &        \\ \cline{2-4} 
+        8                     & min                         &      9.517998536467005      &    16.59913616876128    \\ \cline{2-4} 
+                              & max                         &     21.96       &    1,085    \\ \cline{2-4} 
+                              & promedio                    &     9.517998536467003       &   16.59913616876128     \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
         9                     & min                         &      4.976418408338478      &        \\ \cline{2-4} 
                               & max                         &      21.83      &        \\ \cline{2-4} 
