tabla completa falta formato

--- a/Practica 4/reporteP4.tex
+++ b/Practica 4/reporteP4.tex
@@ -116,45 +116,45 @@
                               & max                         &     21.96       &    1,085    \\ \cline{2-4} 
                               & promedio                    &     9.517998536467003       &   16.59913616876128     \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        9                     & min                         &      4.976418408338478      &        \\ \cline{2-4} 
-                              & max                         &      21.83      &        \\ \cline{2-4} 
-                              & promedio                    &     4.9764184083384775       &        \\ \cline{2-4} 
+        9                     & min                         &      4.976418408338478      &  10.667890800223562      \\ \cline{2-4} 
+                              & max                         &      21.83      &   1,095     \\ \cline{2-4} 
+                              & promedio                    &     4.9764184083384775       &    10.667890800223566    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        10                    & min                         &      0.1668246681319836      &        \\ \cline{2-4} 
-                              & max                         &      22.09      &        \\ \cline{2-4} 
-                              & promedio                    &      0.1668246681319836      &        \\ \cline{2-4} 
+        10                    & min                         &      0.1668246681319836      &     498.35182704181545   \\ \cline{2-4} 
+                              & max                         &      22.09      &    1,085    \\ \cline{2-4} 
+                              & promedio                    &      0.1668246681319836      &    4553.570892237594    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        11                    & min                         &      2.031481808228964      &        \\ \cline{2-4} 
-                              & max                         &     22.05       &        \\ \cline{2-4} 
-                              & promedio                    &       2.031481808228964     &        \\ \cline{2-4} 
+        11                    & min                         &      2.031481808228964      &   9.861834458823816     \\ \cline{2-4} 
+                              & max                         &     22.05       &   1,085     \\ \cline{2-4} 
+                              & promedio                    &       2.031481808228964     &    9.86183445882382    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        12                    & min                         &     0.1668246681319836       &        \\ \cline{2-4} 
-                              & max                         &       21.93     &        \\ \cline{2-4} 
-                              & promedio                    &      0.1668246681319836      &        \\ \cline{2-4} 
+        12                    & min                         &     0.1668246681319836       &   8.778958901717523     \\ \cline{2-4} 
+                              & max                         &       21.93     &   7,915     \\ \cline{2-4} 
+                              & promedio                    &      0.1668246681319836      &     8.77895890171752    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        13                    & min                         &       18.515644131362567     &        \\ \cline{2-4} 
-                              & max                         &     21.93       &        \\ \cline{2-4} 
-                              & promedio                    &    21.090003122849488        &        \\ \cline{2-4} 
+        13                    & min                         &       18.515644131362567     &   498.35182704181545     \\ \cline{2-4} 
+                              & max                         &     21.93       &   1,084     \\ \cline{2-4} 
+                              & promedio                    &    21.090003122849488        &    4553.570892237594    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        14                    & min                         &      2.031481808228964      &        \\ \cline{2-4} 
-                              & max                         &     22.0       &        \\ \cline{2-4} 
-                              & promedio                    &     2.031481808228964       &        \\ \cline{2-4} 
+        14                    & min                         &      2.031481808228964      &  9.861834458823816      \\ \cline{2-4} 
+                              & max                         &     22.0       &    1,081    \\ \cline{2-4} 
+                              & promedio                    &     2.031481808228964       &    9.86183445882382    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        15                    & min                         &     0.1668246681319836       &        \\ \cline{2-4} 
-                              & max                         &      21.96      &        \\ \cline{2-4} 
-                              & promedio                    &      0.1668246681319836      &        \\ \cline{2-4} 
+        15                    & min                         &     0.1668246681319836       &   8.778958901717523     \\ \cline{2-4} 
+                              & max                         &      21.96      &    7,915    \\ \cline{2-4} 
+                              & promedio                    &      0.1668246681319836      &   8.77895890171752     \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        16                    & min                         &      18.515644131362567      &        \\ \cline{2-4} 
-                              & max                         &       21.95     &        \\ \cline{2-4} 
-                              & promedio                    &     21.090003122849488       &        \\ \cline{2-4} 
+        16                    & min                         &      18.515644131362567      &    498.35182704181545    \\ \cline{2-4} 
+                              & max                         &       21.95     &   1,081     \\ \cline{2-4} 
+                              & promedio                    &     21.090003122849488       &   4553.570892237594     \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        17                    & min                         &      2.031481808228964      &        \\ \cline{2-4} 
-                              & max                         &       21.83     &        \\ \cline{2-4} 
-                              & promedio                    &        2.031481808228964    &        \\ \cline{2-4} 
+        17                    & min                         &      2.031481808228964      &    9.861834458823816    \\ \cline{2-4} 
+                              & max                         &       21.83     &    1,085    \\ \cline{2-4} 
+                              & promedio                    &        2.031481808228964    &    9.86183445882382    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
-        18                    & min                         &     0.1668246681319836       &        \\ \cline{2-4} 
-                              & max                         &      21.96      &        \\ \cline{2-4} 
-                              & promedio                    &      0.1668246681319836      &        \\ \cline{2-4} 
+        18                    & min                         &     0.1668246681319836       &    8.778958901717523    \\ \cline{2-4} 
+                              & max                         &      21.96      &     7,896   \\ \cline{2-4} 
+                              & promedio                    &      0.1668246681319836      &    8.77895890171752    \\ \cline{2-4} 
                               & des. est.                   &            &        \\ \hline
 
         \end{tabular}
